--- a/pom.xml
+++ b/pom.xml
@@ -455,7 +455,13 @@
         	<groupId>org.apache.maven.plugins</groupId>
         	<artifactId>maven-pmd-plugin</artifactId>
         	<version>3.14.0</version>
-       </plugin>
+            </plugin>
+            
+        <plugin>
+       			<groupId>org.codehaus.mojo</groupId>
+        		<artifactId>cobertura-maven-plugin</artifactId>
+        		<version>2.7</version>
+      </plugin>
         </plugins>
     </reporting>
 
