--- a/pom.xml
+++ b/pom.xml
@@ -378,8 +378,19 @@
                 <artifactId>maven-resources-plugin</artifactId>
                 <version>2.7</version>
             </plugin>
+            <plugin>
+       			<groupId>org.codehaus.mojo</groupId>
+        		<artifactId>cobertura-maven-plugin</artifactId>
+        		<version>2.7</version>
+        		<configuration>
+          		<formats>
+       			<format>xml</format>
+    			 </formats>
+       			</configuration>
+     	</plugin>
         </plugins>
     </build>
+            
 
     <reporting>
         <plugins>
@@ -457,11 +468,7 @@
         	<version>3.14.0</version>
             </plugin>
             
-        <plugin>
-       			<groupId>org.codehaus.mojo</groupId>
-        		<artifactId>cobertura-maven-plugin</artifactId>
-        		<version>2.7</version>
-      </plugin>
+
         </plugins>
     </reporting>
 
